--- a/M4/WEB/tutorial.html
+++ b/M4/WEB/tutorial.html
@@ -72,7 +72,6 @@
                 <img src="imagenes/subir_tecnologia.png" alt="container_foto_juego">
             </div>
             <p>6) Te sale en el planeta una  ⚠️<u><b>advertencia</b></u>⚠️ de que tienes pocos recursos y con cuidado porque cuando te quedas sin recursos se termina el juego</p>
-            <br></br>
             <h4>Notificación</h4>
             <img src="imagenes/pocos_materiales.png" alt="container_foto">
             <h4>Game Over</h4>
@@ -84,6 +83,13 @@
             <p>En esta ventana puedes comprar nuevas tropas para tu flota, para comprar tienes que poner la cantidad que quieres y te mostrara un mensaje de que se ha hecho, pero si no tienes suficiente te hara la compra de la cantidad que te llega para comprar, imagen de ejemplo</p>
             <div class="container_foto_juego">
                 <img src="imagenes/compras.png" alt="container_foto_juego">
+            </div>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/no_tropas_a_la_vista.png);">
+                <h3><p>Battle Coming</p></h3>
+            </div>
+            <p>En esta ventana se te mostrara la flota que se esta acercando y que tiene esa flota</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/tropas_a_la_vista.png" alt="container_foto_juego">
             </div>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
