--- a/M4/WEB/tutorial_instalacion.html
+++ b/M4/WEB/tutorial_instalacion.html
@@ -30,6 +30,7 @@
     </div>
     <div class="contenido">
         <div class="texto_informativo">
+            <h6>* Esto es para futuro</h6>
             <h1><b>Descarga del juego y más</b></h1>
             <p>
                 Al descargar el archivo comprimido del juego tendrás que descomprimirlo en un sitio que sí o sí te acuerdes.
@@ -158,7 +159,9 @@
             <div class="container_foto_especial">
                 <img src="imagenes/juego2.png" alt="container_foto_especial">
             </div>
+            
             <div class="column_espacio"></div>
+            <h6>* Esto es para futuro</h6>
         </div>
     </div>
 
