--- a/M4/WEB/principal.html
+++ b/M4/WEB/principal.html
@@ -48,23 +48,19 @@
             <p>
                 🌌 Protege el planeta <i>llenos de misterios y amenazas</i>
             </p>
-            <p>
-                ⛔ Tienes que tener la version de <b>java superior a 11.0.12</b> para poder jugar.
-            </p>
         </div>
     </div>
     <div class="contenido">
         <div class="column">
             <p class="flex-container">
-                Imagenes promocionales del juego.
+                Imagenes promocionales del juego:
             </p>
             <div class="carousel-container">
-                <input type="radio" name="slide" id="slide1" checked>
-                <input type="radio" name="slide" id="slide2" checked>
-                
                 <div class="carousel-images">
-                    <img src="imagenes/sin_foto.webp" alt="imagen1">
-                    <img src="imagenes/sin_foto.webp" alt="imagen2">
+                    <img src="imagenes/carru1.png" alt="imagen1">
+                    <img src="imagenes/carru2.png" alt="imagen2">
+                    <img src="imagenes/carru3.png" alt="imagen3">
+                    <img src="imagenes/carru1.png" alt="imagen4">
                 </div>
             </div>
             <div class="column_espacio"></div>
