--- a/M4/WEB/tutorial.html
+++ b/M4/WEB/tutorial.html
@@ -45,8 +45,8 @@
             <p>Estas serian todas las ventanas que en cada una se hace algo diferente:</p>
             <img src="imagenes/ventanas.png" alt="container_foto">
             <br></br>
-            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_ventana\(de\ momento\).png);">
-                <h3><p>Ventana Stats</p></h3>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_ventana.png);">
+                <h3><p>Stats</p></h3>
             </div>
             <p>En esta ventana se vera todo lo relacionado solo a nuestro planeta:</p>
             <br></br>
@@ -59,37 +59,40 @@
             <div class="container_foto_juego_peque">
                 <img src="imagenes/nivel_tecnologico.png" alt="container_foto_juego_peque">
             </div>
-            <p>3) Cantidad de flota y de que exactamente:</p>
-            <div class="container_foto_juego">
-                <img src="imagenes/flota.png" alt="container_foto_juego">
-            </div>
-            <p>4) Cantidad de defensas y que tienes exactamente:</p>
-            <div class="container_foto_juego">
-                <img src="imagenes/defensas.png" alt="container_foto_juego">
-            </div>
+            <p>3) Cantidad de flota y defensas que tenemos exactamente:</p>
+            <img src="imagenes/cantidad.png" alt="container_foto">
             <p>5) Tambien se puede subir el nivel tecnologico</p>
             <div class="container_foto_juego">
                 <img src="imagenes/subir_tecnologia.png" alt="container_foto_juego">
             </div>
-            <p>6) Te sale en el planeta una  ⚠️<u><b>advertencia</b></u>⚠️ de que tienes pocos recursos y con cuidado porque cuando te quedas sin recursos se termina el juego</p>
+            <p>6) Te sale en el planeta una  ⚠️<u><b>advertencia</b></u>⚠️ de que tienes pocos recursos y con cuidado porque cuando te quedas sin recursos se termina el juego:</p>
             <h4>Notificación</h4>
             <img src="imagenes/pocos_materiales.png" alt="container_foto">
             <h4>Game Over</h4>
             <img src="imagenes/fin_partida.png" alt="container_foto">
             <br></br>
-            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_shop\(de\ momento\).png);">
-                <h3><p>Ventana Shop</p></h3>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_shop.png);">
+                <h3><p>Shop</p></h3>
             </div>
-            <p>En esta ventana puedes comprar nuevas tropas para tu flota, para comprar tienes que poner la cantidad que quieres y te mostrara un mensaje de que se ha hecho, pero si no tienes suficiente te hara la compra de la cantidad que te llega para comprar, imagen de ejemplo</p>
+            <p>En esta ventana puedes comprar nuevas tropas para tu flota, para comprar tienes que poner la cantidad que quieres y te mostrara un mensaje de que se ha hecho, pero si no tienes suficiente te hara la compra de la cantidad que te llega para comprar, imagen de ejemplo:</p>
             <div class="container_foto_juego">
                 <img src="imagenes/compras.png" alt="container_foto_juego">
             </div>
-            <div class="imagen_de_fondo" style="background-image: url(imagenes/no_tropas_a_la_vista.png);">
+            <br></br>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_com.png);">
                 <h3><p>Battle Coming</p></h3>
             </div>
-            <p>En esta ventana se te mostrara la flota que se esta acercando y que tiene esa flota</p>
+            <p>En esta ventana se te mostrara la flota que se esta acercando y que tiene esa flota:</p>
             <div class="container_foto_juego">
                 <img src="imagenes/tropas_a_la_vista.png" alt="container_foto_juego">
+            </div>
+            <br></br>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_br.png);">
+                <h3><p>Battle Reports</p></h3>
+            </div>
+            <p>Y la ultima ventana, te muestra cuando ya hayas hecho una batalla al menos te mostrara los datos de la batalla que selecciones, imagen de ejemplo:</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/battle_report.png" alt="container_foto_juego">
             </div>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
