--- a/M4/WEB/tutorial_instalacion.html
+++ b/M4/WEB/tutorial_instalacion.html
@@ -43,125 +43,11 @@
                 2. Descomprime el archivo en una carpeta que te acuerdes (por ejemplo: escritorio o documentos, en mi caso escritorio):
             </p>
             <img src="imagenes/paso_2.png" alt="container_foto">
-            <h2>
-                Apartir de aqui necesitas tener instalado java (<u><b>si ya lo tienes saltate este paso y con la version superior a 11.0.12</b></u>):
-            </h2>
-            <br></br>
             <p>
-                Para saber que lo tienes instalado, pulsa <b>Windows + R</b> y escribe <b>cmd</b> luego pulsa <b>Enter</b> o pulsando la tecla de <b>"Windows"</b> y escribe <b>"cmd"</b> luego pulsa <b>Enter</b>. Se te abrira una ventana negra, en la cual tienes que escribir <b>"java -version"</b> o <b>"javac -version"</b> y si te sale algo como esto es que lo tienes instalado (<i><u>la version tiene que ser superior a <b>11.0.12</b></u></i>):
+                3.1 Abre la carpeta y ejecuta el archivo "The Planet Wars.exe":
             </p>
-            <br></br>
-            <p>Ejemplo de <i>java -version</i>:</p>
-            <img src="imagenes/java-version.png" alt="container_foto">
-            <br></br>
-            <p>Ejemplo de <i>javac -version</i>:</p>
-            <img src="imagenes/javac-version.png" alt="container_foto">
-            <br></br>
-        </div>
-    </div>
-    <div class="contenido">
-        <div class="texto_informativo">
-            <h1><b>Tutorial de Instalación Java (Windows)</b></h1>
-            <p>
-                1.Vete a esta web para <a href="https://adoptium.net/" class="color">descarga java</a>:
-            </p>
-            <p>
-                2. Dale al boton de <b>Download</b> y selecciona la version que quieras (recomendamos superior a <b>11.0.12</b>):
-            </p>
-            <img src="imagenes/boton_descarga_java.png" alt="container_foto">
-            <p>
-                3. Ahora ejecutamos el instalador: cambiar foto
-            </p>
-            <img src="imagenes/ejecutar_instalador.png" alt="Instalador de Java">
-            <p>
-                4. Aceptamos todo y le damos a next hasta que se instale:
-            </p>
-            <p>
-                5.Ahora comprobamos que esta instalado con lo que hemos hecho antes:
-            </p>
-            <img src="imagenes/tut_comprobar_win.png" alt="container_foto">
-            <br></br>
-            <h1><b>Tutorial de Instalación Java (Ubuntu)</b></h1>
-            <p>
-                1.Abre la terminal y escribe <b>sudo apt update</b> y <b>sudo apt upgrade</b> para actualizar el sistema:
-            </p>
-            <div>
-                <img src="imagenes/sudo_apt_update.png" alt="container_foto">
-                <p></p>
-                <img src="imagenes/sudo_apt_upgrade.png" alt="container_foto">
-            </div>
-            <p>
-                2. <b>sudo apt install openjdk-<i>version que quieres en este caso <u>17</u></i>-jdk</b>:
-            </p>
-            <img src="imagenes/ubuntu_instalacion.png" alt="container_foto">
-            <p>
-                3. Ahora comprobamos que esta instalado con lo que hemos hecho antes:
-            </p>
-            <img src="imagenes/tut_comprobar_ubu.png" alt="container_foto">
-            <p>
-                4. Si lo teneis instalado, haremos lo siguiente para poder actualizar en este caso la version 21:
-            </p>
-            <img src="imagenes/version_21_instalacion.png" alt="container_foto">
-            <p>
-                5. Ahora haremos lo siguiente y nos mostrara esto:
-            </p>
-            <div>
-                <img src="imagenes/actu_java_ubu.png" alt="container_foto">
-                <p></p>
-                <img src="imagenes/opciones_ubu.png" alt="container_foto">
-            </div>
-            <p>
-                Yo lo he puesto manual pero normalmente se te pone el automatico(<u><i>0</i></u>) pero es por si no se te pone, aqui como he dicho si en automatico no se te pone, pon el numero de la version de la opcion que se te muestra en este caso queremos la <b>version 21</b> asi que pulsamos en este case <b>"2"</b> y deberia de quedar asi:
-            </p>
-            <img src="imagenes/select_ver.png" alt="container_foto">
-            <br></br>
-            <h1><b>Tutorial de como empezar a jugar</b></h1>
-            <p>
-                Vale ahora que tenemos la version correcta de java y el juego descargado ahora tocara jugarlo.
-                <p></p>
-                <h1><b>Desde Windows</b></h1>
-                1. Abre el terminal:              
-            </p>
-            <img src="imagenes/cmd.png" alt="container_foto">
-            <p>
-                2. Ahora tendremos que ir a la carpeta donde esta el juego en mi caso <b><i>Desktop/Planet_Wars/GamePlanetWars/</i></b>
-            </p>
-            <img src="imagenes/desk_dir.png" alt="container_foto">
-            <p>
-                3. Ahora tocaria abrirlo con el siguiente comando:
-            </p>
-            <img src="imagenes/abrir_juego.png" alt="container_foto">
-            <p>
-                Ahora como podeis ver se nos ha abierto el juego y ya podemos jugar:
-            </p>
-            <div class="container_foto_especial">
-                <img src="imagenes/juego1.png" alt="container_foto_especial">
-            </div>
-            <p></p>
-            <p>
-                <h1><b>Desde Ubuntu</b></h1>
-                1. Abre el terminal:
-            </p>
-            <img src="imagenes/terminal.png" alt="container_foto">
-            <p>
-                2. Ahora vamos al directorio donde esta el juego:
-            </p>
-            <div class="container_foto_especial_cmd">
-               <img src="imagenes/canviar_dir.png" alt="container_foto">
-            </div>
-            <p>
-                3. Ponemos la misma comanda que anteriormente en Windows:
-            </p>
-            <img src="imagenes/abrir_juego2.png" alt="container_foto">
-            <p>
-                4. Y ya podemos juagarlo:
-            </p>
-            <div class="container_foto_especial">
-                <img src="imagenes/juego2.png" alt="container_foto_especial">
-            </div>
-            
+            <img src="imagenes/paso_3.png" alt="container_foto">
             <div class="column_espacio"></div>
-            <h6>* Esto es para futuro</h6>
         </div>
     </div>
 
