--- a/M4/WEB/sobre_nosotros.html
+++ b/M4/WEB/sobre_nosotros.html
@@ -39,7 +39,7 @@
                 <h1>Marc</h1>
             </div>    
             <p class="flex-container">
-                <p>Yo me he encargado de la parte de la <b><i>pagina web</i></b></p>
+                <p>Yo me he encargado de la pagina web y algo de documentacion.</p>
             </p>
         </div>
     </div>
@@ -53,7 +53,7 @@
                 <h1>Miguel</h1>
             </div>    
             <p class="flex-container">
-                <p>Yo me he encargado de la parte del <b><i>programa</i></b> y parte de <b><i>base de datos</i></b></p>
+                <p>Yo he hecho la interfaz y mejoras en las mecánicas del juego.</p>
             </p>
         </div>
     </div>
@@ -67,7 +67,7 @@
                 <h1>Biel</h1>
             </div>    
             <p class="flex-container">
-                <p>Yo me he encargado de la parte del <b><i>programa</i></b> y la mayor parte de <b><i>base de datos</i></b></p>
+                <p>Participé en el desarrollo de las mecánicas, clases y demás elementos iniciales; además, me encargué de la creación de la base de datos y la documentación correspondiente.</p>
             </p>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
