--- a/M4/WEB/tutorial.html
+++ b/M4/WEB/tutorial.html
@@ -40,7 +40,7 @@
             <div class="container_foto_juego">
                 <img src="imagenes/juego.png" alt="container_foto_juego">
             </div>
-            <p>funcion del inicio</p>
+            <p>Como se ve en la imagen se necesita nombre de usuario y contrasenya si no teneis una cuenta tendreis que crearla para la contrasenya estan la siguientes condiciones <b>(6 caracteres, 1 letra minuscula, 1 letra mayuscula, 1 numero y caracter especial no alfanumerico)</b> y darle a <b>"Registrer"</b> si ya teneis una solo poneis el nombre y vuestra constresenya y darle <b>"Login"</b></p>
             <br></br>
             <p>Estas serian todas las ventanas que en cada una se hace algo diferente:</p>
             <img src="imagenes/ventanas.png" alt="container_foto">
